--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </p>
                 <p class="p2-black">
                     Neste Mês do Nutri, o WebDiet celebra você com tudo que faz a diferença no dia a dia: soluções práticas,
-                    presentes especiais e uma experiência mais leve e eficiente no atendimento.
+                    presentes especiais e uma experiência mais leve e eficiente no atendimento.....
                 </p>
             </section>
         </div>
