--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </h1>       
             <div id="desbloqtext">
                 Mais que uma assinatura: é tudo o que você precisa para atender com
-                eficiência, no ritmo da sua rotina......
+                eficiência, no ritmo da sua rotina.
             </div>
       </div>
     </div>
