--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
           src="assets/img/logo mes do nutri.png"
           alt="logo.mes.nutri"
         />
-        <section>
-          <p class="p-red">
-            Tudo começa aqui: o essencial para a sua prática clínica
-          </p>
-          <p class="p2-black">
-            Neste Mês do Nutri, o WebDiet celebra você com tudo que faz a
-            diferença no dia a dia: soluções práticas, presentes especiais e uma
-            experiência mais leve e eficiente no atendimento.
-          </p>
-        </section>
+        <p class="p-red">
+          Tudo começa aqui: o essencial para a sua prática clínica
+        </p>
+        <p class="p2-black">
+          Neste Mês do Nutri, o WebDiet celebra você com tudo que faz a
+          diferença no dia a dia: soluções práticas, presentes especiais e uma
+          experiência mais leve e eficiente no atendimento.
+        </p>
       </div>
       <div class="header-img">
         <img id="img-model" src="assets/img/modelo 1.png" alt="modelo1" />
@@ -38,13 +36,45 @@
     </div>
     <div class="faixa">
       <div class="faixacont">
-            <h1 class="desbloqhead">
-                Desbloqueie seus benefícios
-            </h1>       
-            <div id="desbloqtext">
-                Mais que uma assinatura: é tudo o que você precisa para atender com
-                eficiência, no ritmo da sua rotina......
+        <h1 class="desbloqhead">Desbloqueie seus benefícios</h1>
+        <div id="desbloqtext">
+          Mais que uma assinatura: é tudo o que você precisa para atender com
+          eficiência, no ritmo da sua rotina.
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="quadrados">
+        <div class="orange-red">
+          <div id="orange">
+            <div class="titulos">Plano <br />Premium</div>
+            <div class="paragrafos">
+              O queridinho voltou! Assine o semestral e ganhe um kit de laminas
             </div>
+          </div>
+          <div id="red">
+            <div class="titulos">Vantagens <br />de ser <br />Premium</div>
+            <div class="paragrafos">
+              <ul class="listas">
+                <li>Pacientes ilimitados</li>
+                <li>Modelos de prescrição</li>
+                <li>App para todos os pacientes</li>
+                <li>E mais!</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="blue2">
+          <img src="assets/img/modelo 02.png" alt="modelo" />
+        </div>
+        <div id="blue">
+          <img src="assets/img/conjunto de laminas.png" alt="laminas" />
+          <div class="titulos">Kit de laminas surpresa</div>
+          <div class="paragrafos">
+            São 3 kits disponíveis para ajudar na sua prática clínica. Teste sua
+            sorte!
+          </div>
+        </div>
       </div>
     </div>
   </body>
